<resources>
    <string name="app_name">umaass</string>
    <string name="FACEBOOK_APP_ID" translatable="false">2278502678859504</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">229c29cb8b563b6af10fbb9a438ef4cb</string>
    <string name="map_token" translatable="false">AIzaSyDixjezSxgosOnxj5028BOIStLGHeOUCN8</string>
    <string name="banner_ad_unit_id_1" translatable="false">ca-app-pub-6606021354718512/7032083148</string>
    <string name="banner_ad_unit_id_2" translatable="false">ca-app-pub-6606021354718512/3546820620</string>
    <string name="banner_ad_unit_id_3" translatable="false">ca-app-pub-6606021354718512/6033738384</string>
    <string name="banner_ad_unit_id_4" translatable="false">ca-app-pub-6606021354718512/3023607255</string>
    <string name="banner_ad_unit_id_5" translatable="false">ca-app-pub-6606021354718512/6987543622</string>
    <string name="requests">Requests</string>
    <string name="setting">Setting</string>
    <string name="files">Files</string>
    <string name="book">Book</string>
    <string name="appointment">Appointment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_activityappointment">Activityappointment</string>
    <string name="take_appointment">Take Appointment</string>
    <string name="appointment_phone">Appointment Phone</string>
    <string name="central_phone">Central Phone</string>
    <string name="accept">Accept</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="select_city">Select city</string>
    <string name="order_by">Order by</string>
    <string name="dfault">Default</string>
    <string name="a2zSort">A-Z Sort</string>
    <string name="newest">Newest</string>
    <string name="most_visited">Most visited</string>
    <string name="oldest">Oldest</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="place">Place</string>
    <string name="search_and_filter">Search And Filter</string>
    <string name="distance">Distance</string>
    <string name="unlimit">Unlimit</string>
    <string name="meter">Meter</string>
    <string name="kilometer">Kilometer</string>
    <string name="specialty">Specialty</string>
    <string name="grade">Grade</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="Apply">Apply</string>
    <string name="try_again">Please try again</string>
    <string name="something_wrong">SomeThing wrong</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="pls_wait">Please wait...</string>
    <string name="not_empty">Should not be empty</string>
    <string name="saved">Saved</string>
    <string name="pls_try_again">Please try again</string>
    <string name="about_us">About us</string>
    <string name="review">Review</string>
    <string name="prescription">Prescription</string>
    <string name="address">Address</string>
    <string name="your_bio">Your Bio</string>
    <string name="register">Register</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="gallery">Gallery</string>
    <string name="sick_name">Sick Name</string>
    <string name="reference_number">Reference Number :</string>
    <string name="sick_info">Sick info</string>
    <string name="date">Date</string>
    <string name="type_service">Type service</string>
    <string name="sunday">Sunday</string>
    <string name="to" translatable="false">To</string>
    <string name="car_number">Car Number</string>
    <string name="month_">Month :</string>
    <string name="month">Month</string>
    <string name="day_">Day :</string>
    <string name="day">Day</string>
    <string name="service_name">Service Name</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="done">Done</string>
    <string name="no_items_found">No items found</string>
    <string name="all">All</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="request_status">Request Status :</string>
    <string name="pending">Pending</string>
    <string name="name">Name</string>
    <string name="service">Service</string>
    <string name="comments">Comments</string>
    <string name="working_hours">Working Hours</string>
    <string name="services">Services</string>
    <string name="staff">Staff</string>
    <string name="edit_industry">Edit Industry</string>
    <string name="edit_location">Edit Location</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="hours">Hours</string>
    <string name="set_your_business_hours">Set Your Business Hours</string>
    <string name="let_your_customers_know_when_you_are_open">Let your customers know when you are open</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="define_your_staff_password">Define Your Staff Password</string>
    <string name="you_can_define_and_change_your_staff_password">You can define and change your staff password</string>
    <string name="admin_password">Admin Password</string>
    <string name="co_worker_password">Co-Worker Password</string>
    <string name="assistant_password">Assistant Password</string>
    <string name="add_the_services_you_offer">Add The Services You Offer</string>
    <string name="don_t_worry_you_can_always_edit_these_later">Don\'t worry! you can always edit these later</string>
    <string name="time_duration">Time Duration</string>
    <string name="price">Price</string>
    <string name="add_your_staff">Add Your Staff</string>
    <string name="user_name">User Name</string>
    <string name="roll">Roll</string>
    <string name="permission">Permission</string>
    <string name="cancel">Cancel</string>
    <string name="staffs">Staffs</string>
    <string name="we_ll_get_you_booking_appointments_in_no_time_next">We\'ll get you booking appointments in no time next</string>
    <string name="setup_only_takes_a_moment_you_ll_be_booking_appointments_in_no_time">Setup only takes a moment. you\'ll be booking appointments in no time.</string>
    <string name="industry">Industry</string>
    <string name="city">City</string>
    <string name="your_business">Your Business</string>
    <string name="phone">Phone</string>
    <string name="booking_appointment">Booking Appointment</string>
    <string name="are_you_sure_for_delete">Are you sure for delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="not_valid">Not Valid</string>
    <string name="price_">Price :</string>
    <string name="duration_">Duration :</string>
    <string name="your_gps_seems_to_be_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="gps_is_off">Gps is off</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_date">Select Date</string>
    <string name="date_">Date :</string>
    <string name="time_">Time :</string>
    <string name="confirmed">Confirmed</string>
    <string name="no_show">No-Show</string>
    <string name="change_status">Change Status</string>
    <string name="choose_date">Choose Date</string>
    <string name="deleted">Deleted</string>
    <string name="are_you_sure_for_logout">Are you sure for log out?</string>
    <string name="please_set_your_time">Please Set Your Time</string>
    <string name="please_select_a_location">Please select a location</string>
    <string name="update_service">Update Service</string>
    <string name="add_service">Add Service</string>
    <string name="add_staff">Add Staff</string>
    <string name="update_staff">Update Staff</string>
    <string name="choose_roll">Choose Roll</string>
    <string name="choose_industry">Choose Industry</string>
    <string name="choose_city">Choose City</string>
    <string name="exit">Exit</string>
    <string name="city_2dot">city :</string>
    <string name="code_2dot">code :</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="version">Version</string>
    <string name="welcome_to_umaass" translatable="false">Welcome To umaass</string>
    <string name="login">Login</string>
    <string name="status">Status</string>
    <string name="about">About</string>
    <string name="provider_time_schedule">Provider Time Schedule</string>
    <string name="move">move</string>
    <string name="see">See</string>
    <string name="expert">Expert</string>
    <string name="closest">Closest :</string>
    <string name="type_a_comment">Type a comment...</string>
    <string name="filter">Filter</string>
    <string name="near_me">Near Me</string>
    <string name="provider">Provider</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="visit_date">Visit Date</string>
    <string name="visit_time">Visit Time</string>
    <string name="information">Information</string>
    <string name="for_another">For Another</string>
    <string name="for_me">For me</string>
    <string name="full_name">Full Name</string>
    <string name="rules">Rules</string>
    <string name="agree">Agree</string>
    <string name="my_favorites">My Favorites</string>
    <string name="sure_for_cancel">Are you sure for cancel?</string>
    <string name="gps_off_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="please_select_date_and_time">Please select date and time</string>
    <string name="age_">Age :</string>
    <string name="gender_">Gender :</string>
    <string name="name_">Name :</string>
    <string name="phone_">Phone :</string>
    <string name="choose_service">Choose Service</string>
    <string name="please_check_the_rules">please check the rules</string>
    <string name="are_you_sure_for_exit">Are you sure for exit?</string>
    <string name="age">Age</string>
    <string name="description">Description</string>
    <string name="successful_operation">Successful Operation</string>
    <string name="balance_is_not_enough">Balance Is Not Enough</string>
    <string name="wallet_not_found">Wallet Not Found!</string>
    <string name="transactions_list">Transactions List</string>
    <string name="charge_code_applied_successfully">Charge Code Applied Successfully</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="request_has_been_sent_successfully">Request Has Been Sent Successfully</string>
    <string name="balance_is_low">Balance Is Low!</string>
    <string name="accounts_charge">Accounts Charge</string>
    <string name="send_money">Send Money</string>
    <string name="commission_wallet">Commission</string>
    <string name="remain_balance">Remain Balance</string>
    <string name="charge_by_cash">Charge by cash</string>
    <string name="charge_by_code">Charge by code</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="complete">Complete</string>
</resources>