<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.stepstone.stepper.StepperLayout
        android:id="@+id/stepperLayout"
        app:ms_stepperType="tabs"
        app:ms_activeStepColor="@color/colorAccent"
        app:ms_backButtonColor="@color/colorAccent"
        app:ms_nextButtonColor="@color/colorAccent"
        android:layout_width="match_parent"
        app:ms_nextButtonText="@string/next"
        app:ms_backButtonText="@string/back"
        app:ms_completeButtonText="@string/complete"
        app:ms_completeButtonColor="@color/colorAccent"
        android:layout_height="match_parent" />

</LinearLayout>


