<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:background="@color/card_color"
    android:orientation="horizontal"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/ic_person_black" />

        <FrameLayout
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#DFC3FF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txtRoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/roll"
            android:textColor="@color/colorAccent"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/phone"
            android:textColor="@color/secondaryPrimaryText"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/secondaryPrimaryText"
                android:textSize="14dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/edit"
                android:textColor="@color/colorAccent"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="Delete"
                android:textColor="@color/colorAccent"
                android:textSize="14dp" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>