<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_color"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/provider"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18dp" />


                    <TextView
                        android:id="@+id/txtProviderName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text=""
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txtTakhasos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text=""
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="12dp" />

                </LinearLayout>

                <net.umaass_user.app.utils.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/profile" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/appointment_date"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_item"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/visit_date"
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/visit_time"
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/information"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_item"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/name"
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="Phone Number"
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/age"
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/gender"
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="14dp" />
                    <TextView
                        android:id="@+id/txtDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/description"
                        android:textColor="@color/secondaryPrimaryText"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

